using UnityEngine;

/// <summary>
/// キャンプ
/// </summary>
public class Camp : FactoryBase
{
    public override void Effect()
    {
        throw new System.NotImplementedException();
    }
}