/// <summary>
/// ユニットのインターフェース
/// </summary>
public interface IUnit
{
    public void Move();
    public void Action();
}